improves implementation and adds dragndrop support

--- a/jfx/src/main/resources/net/ladstatt/logboard/logboard.fxml
+++ b/jfx/src/main/resources/net/ladstatt/logboard/logboard.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<BorderPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="net.ladstatt.logboard.LogboardController"
-            prefHeight="400.0" prefWidth="600.0">
-
-    <center>
-        <FlowPane fx:id="flowPane"/>
-    </center>
-</BorderPane>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.control.ScrollPane?>
+<ScrollPane
+        xmlns="http://javafx.com/javafx"
+        xmlns:fx="http://javafx.com/fxml"
+        onDragDropped="#handleDrop" onDragOver="#handleDragOver"
+        prefHeight="450.0" prefWidth="800.0" fitToWidth="true"
+        fx:controller="net.ladstatt.logboard.LogboardController">
+    <FlowPane fx:id="flowPane" hgap="1" vgap="1"/>
+</ScrollPane>
