#172: improves visual appearance of LogTextView; increases scrollbar size

--- a/app/src/main/resources/app/logorrr/LogTextView.css
+++ b/app/src/main/resources/app/logorrr/LogTextView.css
@@ -19,3 +19,12 @@
     -fx-background-color: transparent;
 }
 
+.list-cell:filled:selected {
+    -color-cell-fg: -color-cell-fg-selected-focused;
+    -fx-background-color: -color-logorrr-selected;
+}
+
+.list-cell:filled:selected {
+    -color-cell-fg: -color-cell-fg-selected-focused;
+    -fx-background-color: -color-logorrr-selected;
+}
